--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,15 @@ target/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Added by cargo
+OVMF_CODE_4M.fd
+OVMF_VARS_4M.fd
+QEMU_EFI.fd
+esp/
+
+
+*.img
+*.iso
+*.vdi
+
